# DuneTriggerAlgs

./: .gitignore  CMakeLists.txt  DuneTriggerAlgsConfig.cmake.in  DuneTriggerAlgsConfigVersion.cmake.in  DuneTriggersConfig.cmake.in  DuneTriggersConfigVersion.cmake.in  README.md  triggeralgsConfig.cmake.in
.github/workflows/: dunedaq-develop-cpp-ci.yml
autogen/: CMakeLists.txt  main.cxx.in
cmake/: triggeralgsConfig.cmake.in  triggeralgsConfigVersion.cmake.in
dune-trigger-algs/: TimingMessage.hh  TriggerActivity.hh  TriggerActivityMaker.hh  TriggerCandidate.hh  TriggerCandidateMaker.hh  TriggerCandidateMaker_Timing.hh  TriggerDecision.hh  TriggerDecisionMaker.hh  TriggerPrimitive.hh  TriggerPrimitiveMaker.hh
dune-trigger-algs/Supernova/: CMakeLists.txt  TriggerActivityMaker_Supernova.cc  TriggerActivityMaker_Supernova.hh  TriggerCandidateMaker_Supernova.cc  TriggerCandidateMaker_Supernova.hh  TriggerCandidateMaker_Timing.cc  TriggerCandidateMaker_Timing.hh  TriggerDecisionMaker_Supernova.cc  TriggerDecisionMaker_Supernova.hh
dune-triggers/: CMakeLists.txt  TriggerCandidateMaker.hh  TriggerDecision.hh  TriggerDecisionMaker.hh  TriggerPrimitiveMaker.hh
dune-triggers/Supernova/: CMakeLists.txt  TriggerCandidateMaker_Supernova.cc  TriggerCandidateMaker_Supernova.hh  TriggerDecisionMaker_Supernova.cc  TriggerDecisionMaker_Supernova.hh
dune-triggers/Trivial/: TriggerCandidateMaker_Trivial.hh  TriggerDecisionMaker_Trivial.hh
exec/: CMakeLists.txt  NaiveTriggerCandidateConsumer.h  NaiveTriggerQueue.h  compile_me.cxx  run_random_trivial.cxx  run_trivial_candidate.cxx
include/: CMakeLists.txt
include/triggeralgs/: CMakeLists.txt  TriggerActivity.hpp  TriggerActivityMaker.hpp  TriggerCandidate.hpp  TriggerCandidateMaker.hpp  TriggerCandidateMaker_Timing.hpp  TriggerCandidateType.hpp  TriggerDecision.hpp  TriggerDecisionMaker.hpp  TriggerPrimitive.hpp  TriggerPrimitiveMaker.hpp  Types.hpp
include/triggeralgs/ADCSimpleWindow/: README.md  TriggerActivityMakerADCSimpleWindow.hpp  TriggerCandidateMakerADCSimpleWindow.hpp
include/triggeralgs/Michel/: TriggerActivityMakerMichel.hpp  TriggerCandidateMakerMichel.hpp  TriggerDecisionMakerMichel.hpp
include/triggeralgs/Prescale/: TriggerActivityMakerPrescale.hpp  TriggerCandidateMakerPrescale.hpp
include/triggeralgs/Supernova/: TriggerActivityMakerSupernova.hpp  TriggerActivityMaker_Supernova.hpp  TriggerCandidateMakerSupernova.hpp  TriggerCandidateMaker_Timing.cpp  TriggerDecisionMakerSupernova.hpp
src/: CMakeLists.txt  CommonDef.hh  TriggerActivityMakerADCSimpleWindow.cpp  TriggerActivityMakerMichel.cpp  TriggerActivityMakerPrescale.cpp  TriggerActivityMakerSupernova.cpp  TriggerActivityMaker_Supernova.cpp  TriggerCandidate.hh  TriggerCandidateMaker.hh  TriggerCandidateMakerADCSimpleWindow.cpp  TriggerCandidateMakerMichel.cpp  TriggerCandidateMakerPrescale.cpp  TriggerCandidateMakerSupernova.cpp  TriggerCandidateMaker_Supernova.cpp  TriggerCandidateMaker_Timing.cpp  TriggerDecision.hh  TriggerDecisionMaker.hh  TriggerDecisionMakerMichel.cpp  TriggerDecisionMakerSupernova.cpp  TriggerDecisionMaker_Supernova.cpp  TriggerPrimitive.hh  TriggerPrimitiveMaker.hh  TriggerQueue.hh
src/supernova/: TriggerCandidateMaker_supernova.hh
src/triggeralgs/: TriggerCandidateMaker_Timing.hpp
src/triggeralgs/Supernova/: TriggerActivityMakerSupernova.hpp  TriggerActivityMaker_Supernova.hpp  TriggerCandidateMaker_Supernova.hpp  TriggerDecisionMakerSupernova.hpp  TriggerDecisionMaker_Supernova.hpp
src/trivial/: TriggerCandidateMaker_trivial.hh  TriggerDecisionMaker_trivial.hh
test/: CMakeLists.txt  test_supernova.cxx  test_trivial.cxx
